syntax = "proto3";
package stayking.levstakeibc;

option go_package = "github.com/soohoio/stayking/v2/x/levstakeibc/types";
import "gogoproto/gogo.proto";

message SplitDelegation {
  string validator = 1;
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message DelegateCallback {
  string host_zone_id = 1;
  uint64 deposit_record_id = 2;
  repeated SplitDelegation split_delegations = 3;
}

message UndelegateCallback {
  string host_zone_id = 1;
  repeated SplitDelegation split_delegations = 2;
  repeated uint64 epoch_unbonding_record_ids =3;
}